[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/arma/sniperCamo.obj" type="ArrayMesh" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sons/tiro.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sons/morteinimigo.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sons/municao.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sons/tema.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sons/vidas.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sons/dano.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Modelos/astronautB.obj" type="ArrayMesh" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4
height = 1.4

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( -3, 0, -9.77524e-07, 0, 3, 0, 9.77524e-07, 0, -3, 0, 0, 0.5 )
mesh = ExtResource( 9 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.1, 0 )
visible = false
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.959, 0 )

[node name="arma" type="MeshInstance" parent="Camera"]
transform = Transform( -7.6186, -0.40626, -2.40662, -0.989848, 7.72483, 1.82953, 2.23093, 2.04008, -7.40682, 0.261, -0.245, -0.611 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null
material/17 = null
material/18 = null
material/19 = null
material/20 = null
material/21 = null
material/22 = null
material/23 = null
material/24 = null
material/25 = null
material/26 = null
material/27 = null
material/28 = null
material/29 = null
material/30 = null
material/31 = null
material/32 = null
material/33 = null
material/34 = null
material/35 = null
material/36 = null
material/37 = null
material/38 = null
material/39 = null
material/40 = null
material/41 = null

[node name="mira" type="Spatial" parent="Camera/arma"]
transform = Transform( 0.999999, -7.45058e-09, 0, 8.9407e-08, 1, 0, 3.8743e-07, 1.49012e-08, 1, -0.000404716, -0.000482619, 0.0762664 )

[node name="AudioTiro" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[node name="AudioAmmoTaken" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )

[node name="AudioLifeTaken" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )

[node name="AudioEnemyDied" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="AudioHit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )

[node name="AudioTheme" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
